sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:25: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
          deplace(((trouverTrou()+1%)nbBases),bonJoueurDroite(B))
                                   ^